Remove legacy end points
